syntax = "proto3";

package payment.v1;

// The go_package option defines the import path of the package 
// which will contain all the generated code for this file. 
// The Go package name will be the last path component of the import path.
option go_package = "github.com/steveanlorn/learning-protobuf/gen/go/payment/v1;paymentpb";

enum PaymentProvider {
  PAYMENT_PROVIDER_UNSPECIFIED = 0;
  PAYMENT_PROVIDER_GOPAY       = 1;
  PAYMENT_PROVIDER_OVO         = 2;
  PAYMENT_PROVIDER_DANA        = 3;
}

message Order {
  string          order_id         = 1;
  string          recipient_id     = 2;
  PaymentProvider payment_provider = 3;
}